fix (Public Shell): add gap and hover effect to sidenav dots

--- a/src/assets/scss/components/_lab-sidenav.scss
+++ b/src/assets/scss/components/_lab-sidenav.scss
@@ -8,4 +8,14 @@
     flex-direction: column;
     height: 100%;
     justify-content: center;
+    gap: .5rem;
+    .material-icons-outlined {
+        font: {
+            size: 1.25rem;
+        }
+        transition: all .3s cubic-bezier(0.215, 0.610, 0.355, 1);
+        &:hover {
+            transform: scale(1.5);
+        }
+    }
 }
